--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "prebuild": "npm run clean",
     "build": "npm run compile && npm run copy-files",
     "check-types": "tsc -p tsconfig.spec.json",
-    "clean": "rimraf dist",
+    "clean": "npx rimraf dist",
     "compile": "tsc",
     "completion": "tabtab install --name jhipster --auto",
     "copy-files": "cpy \"generators/**\" \"!**/*.(js|cjs|mjs|ts|cts|mts|snap)\" \"!**/__*/*\" dist/generators",
