--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "prettier-plugin-packagejson": "2.5.0",
     "prettier-plugin-properties": "0.3.0",
     "randexp": "0.5.3",
+    "rimraf": "^6.0.1",
     "semver": "7.6.2",
     "simple-git": "3.24.0",
     "sort-keys": "5.0.0",
@@ -114,7 +115,6 @@
     "open-cli": "8.0.0",
     "prettier2": "npm:prettier@2.8.8",
     "quibble": "0.9.2",
-    "rimraf": "5.0.7",
     "sinon": "18.0.0",
     "sinon-chai": "3.7.0",
     "typescript": "^5.5.4",
